Creating users modules
