# src/modules/accounts/entities/User.ts
@@ -1,29 +1,40 @@
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm";
 import {v4 as uuidV4 } from "uuid";
 
-@Entity("specifications")
-class Specification {
+@Entity("users")
+class User {
+    
     @PrimaryColumn()
-    id?: string;
+    id: string;
 
     @Column()
     name: string;
+    
+    @Column()
+    username: string;
+    
+    @Column()
+    email: string;
+    
+    @Column()
+    password: string;
+    
+    @Column()
+    driver_license: string;
 
     @Column()
-    description: string;
-
+    isAdmin: boolean;
+    
     @CreateDateColumn()
     created_at: Date;
 
     constructor() {
-        if (!this.id) {
+        if ( !this.id ) {
             this.id = uuidV4();
-
         }
-
     }
 
 
 }
 
-export { Specification };
+export { User }
