# src/swagger.json
@@ -105,6 +105,46 @@
                 }
               }
             }
+        },
+        "/specifications": {
+          "post": {
+            "tags": ["Specifications"],
+            "summary": "Create a specification",
+            "description": "Create a new specification",
+            "security": [
+              { "bearerAuth": []}
+             ],
+            "requestBody": {
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/definitions/Specification"
+                  }
+                }
+              }
+            },
+            "responses": {
+              "201": {
+                "description": "Created"
+              },
+              "500": {
+                "description": "Specification already exists!"
+              }
+            }
           }
+        }
+    },
+    "definitions": {
+      "Specification": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          }
+        }
+      }
     }
 }
